// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 gowFQ"
  id={null}
  rows={null}
>
  <input
    className="Slider__SliderPiece-sc-1hp9era-0 bqOpTP"
    disabled={false}
    id="default"
    max={20}
    min={1}
    onChange={[Function]}
    step={1}
    type="range"
    value={8}
  />
</section>
`;

exports[` 2`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 eVqRaz Form__FormInputs-v2wrel-3 bZGKXs"
    id={null}
    rows={null}
  >
    <section
      className="Form__FormSection-v2wrel-2 kbyyVh"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 gfzBkI"
        fontSize="1.05em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Standard
      </h6>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 gowFQ"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 bqOpTP"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={null}
        />
      </section>
    </section>
    <section
      className="Form__FormSection-v2wrel-2 kbyyVh"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 gfzBkI"
        fontSize="1.05em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Error
      </h6>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 gowFQ"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 hnwAQE"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={null}
        />
      </section>
    </section>
    <section
      className="Form__FormSection-v2wrel-2 kbyyVh"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 gfzBkI"
        fontSize="1.05em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Disabled
      </h6>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 gowFQ"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 bqOpTP"
          disabled={true}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={null}
        />
      </section>
    </section>
  </section>
</form>
`;

exports[` 3`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 eVqRaz Form__FormInputs-v2wrel-3 bZGKXs"
    id={null}
    rows={null}
  >
    <section
      className="Form__FormSection-v2wrel-2 kbyyVh"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 gfzBkI"
        fontSize="1.05em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Standard
      </h6>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 gowFQ"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 bqOpTP"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={null}
        />
      </section>
    </section>
    <section
      className="Form__FormSection-v2wrel-2 kbyyVh"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 gfzBkI"
        fontSize="1.05em"
        fontWeight={600}
        letterSpacing="0px"
      >
        With Label
      </h6>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 gowFQ"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 bqOpTP"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={null}
        />
        <div
          className="Tag__TagContainer-sc-128kb3h-0 kzfjeA"
          id={null}
          label={null}
          style={
            Object {
              "left": "-4.5%",
              "position": "relative",
            }
          }
        />
      </section>
    </section>
    <section
      className="Form__FormSection-v2wrel-2 kbyyVh"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 gfzBkI"
        fontSize="1.05em"
        fontWeight={600}
        letterSpacing="0px"
      >
        With Range
      </h6>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 gowFQ"
        id={null}
        rows={null}
      >
        <input
          className="Slider__SliderPiece-sc-1hp9era-0 bqOpTP"
          disabled={false}
          id={null}
          max={20}
          min={1}
          onChange={[Function]}
          step={1}
          type="range"
          value={null}
        />
        <div
          className="Bar__BarLayout-sc-1c4axau-2 xQXbG"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-sc-1c4axau-1 hAjMjw"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              id={null}
              letterSpacing="0.2px"
            >
              1
            </p>
          </div>
          <div
            className="Bar__Slot-sc-1c4axau-1 kHYCoh"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 eGFGis"
              fontSize="0.75em"
              fontWeight={600}
              id={null}
              letterSpacing="0.2px"
            >
              20
            </p>
          </div>
        </div>
      </section>
    </section>
  </section>
</form>
`;
